Reduced image's size

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     <section id="contact">
         <h2>Contact me</h2>
 
-        <form action="mailto:jodt5200@gmail.com">
+        <form action="mailto:jodt5200@gmail.com" method="post">
             <label for="name"> Name</label>
             <input type="text" name="name" id="name" class="key-entry" placeholder="Name" required>
 
