Added one project more to the projects section and fixing a problem with the technical documentation page bug

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <h3>Survey Form</h3>
             </a>
 
-            <a href="#" class="project-card" target="_blank">
+            <a href="https://codepen.io/thomasjodt/full/wvpXMRN" class="project-card" target="_blank">
                 <img src="assets/images/documentation.jpg" alt="Documentation Page made in codepen.io">
                 <h3>Technical <br> Documentation Page</h3>
             </a>
@@ -70,6 +70,11 @@
             <a href="https://codepen.io/thomasjodt/full/vYpRoxd" class="project-card" target="_blank">
                 <img src="assets/images/tribute-page.jpg" alt="Tribute page made in codepen.io">
                 <h3>Tribute Page</h3>
+            </a>
+
+            <a href="https://thomasjodt.github.io/javascript-practico/" class="project-card" target="_blank">
+                <img src="assets/images/calculator2.jpg" alt="Tribute page made in codepen.io">
+                <h3>Data Calculator</h3>
             </a>
             
         </section>
@@ -79,7 +84,7 @@
     <section id="contact">
         <h2>Contact me</h2>
 
-        <form action="mailto:jodt5200@gmail.com" method="post">
+        <form action="https://formsubmit.co/jodt5200@gmail.com" method="POST" />
             <label for="name"> Name</label>
             <input type="text" name="name" id="name" class="key-entry" placeholder="Name" required>
 
