Minimized logo's weight, changed the banner on the header, added a favicon and added some styles to the navbar

--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
           <div class="burger-line"></div>
         </div>
       </nav>
-
-      <h1 class="title">Frontend web <br>developer</h1>
+      <img class="banner" src="assets/images/HeaderLogo.png" alt="Banner of my Brand">
       <p class="header-description">Learn more about me</p>
     </header>
 
